# SignalWire-SDK-Workshop

./: .env.example  .gitignore  .replit  CHANGELOG.md  DEPLOYMENT.md  README.md  agent_graph.py  call_store.py  config_store.py  creds_normalize.py  error_store.py  function_health.py  live_events.py  main.py  pyproject.toml  replit_setup.py  session_store.py  storage.py  swaig_cases.py
.claude/: settings.local.json
python/: provisioning.py
scripts/: swaig_preflight.py
tests/: test_admin_observability.py  test_admin_routes.py  test_agent_graph.py  test_call_store.py  test_caller_identity_guard.py  test_charts.py  test_config_store.py  test_correlation.py  test_creds_normalize.py  test_error_store.py  test_frontend_content.py  test_function_health.py  test_handler_url.py  test_live_events.py  test_live_wire_isolation.py  test_metrics_timeline.py  test_number_search_fallback.py  test_postprompt_final.py  test_postprompt_modal_ui.py  test_postprompt_params.py  test_pronunciation.py  test_provisioning_creds.py  test_relay_config.py  test_routes.py  test_session_admin.py  test_session_stamp.py  test_session_store.py  test_state_flow.py  test_stateflow_renderer.py  test_step11_session_helper.py  test_step11_weather_timing.py  test_step_numbering.py  test_storage_backend.py  test_store_persistence_kv.py  test_swaig_admin_dispatch.py  test_swaig_cases.py  test_weather_datamap.py  test_weather_tool.py
typescript/: package-lock.json  package.json  tsconfig.json  types.d.ts
web/: admin.html  buddy-video.js  charts.js  global-data.js  index-new.html  index.html  json-tree.js  (+7 more)
(+27 files in other folders)
