[project]
name = "signalwire-agents-sdk-workshop"
version = "0.1.0"
description = "SignalWire workshop covering AI Agent, REST, and RELAY pillars"
requires-python = ">=3.11"
dependencies = [
    "signalwire-agents>=1.1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "requests>=2.32",
]

[dependency-groups]
dev = ["httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]
